1998-03-18  Alex Lancaster  <alex@santafe.edu>

	* ObserverSwarm.m: Import <activity.h> since it is referenced in
	this implementation.

	* ModelSwarm.m: Import <activity.h> and <collections.h>.  Taken
	from interface header file.

	* ModelSwarm.h: Removed irrelevant <collections.h>, <activity.h>
	and <objectbase.h> imports. Not used in interface.

	* FoodSpace.m: Removed import of <simtools.h>. Added import of
	<random.h>. Reformatting throughout.

	* FoodSpace.h: Removed irrelevant import of <simtools.h>. Minor
	re-formatting.

1998-02-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObserverSwarm.m: Don't include collections.h, objectbase.h,
	analysis.h, or gui.h.  Include simtoolsgui.h.

	* ObserverSwarm.h: Don't include objectbase.h, space.h,
	activity.h, gui.h, collections.h, simtools.h, or analysis.h.
	Include simtoolsgui/GUISwarm.h.

	* ModelSwarm.m: Include random.h instead of simtools.h.
	Reformatting throughout.

	* Bug.m: Don't include simtools.h or gui.h.  Include random.h.

1998-02-26  Alex Lancaster  <alex@santafe.edu>

	* ObserverSwarm.m ([ObserverSwarm -build{Objects,Actions}]): Made
	all references to object creation in create: and createBegin:
	calls be to "self" rather than the redundant [self getZone].
	Swarms are now responsible for managing their own Zones.

	* ModelSwarm.m: Likewise.

	* ObserverSwarm.m ([ObserverSwarm -buildObjects]): Removed
	redundant variable modelZone.

1998-02-20  Alex Lancaster  <alex@santafe.edu>

	* README: Fixed NEXT -> reference to point to simpleExperBug.

1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Bug.h, ModelSwarm.h: Include from objectbase/ instead of
	swarmobject/.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObserverSwarm.m ([ObserverSwarm -buildObjects]): Use Colormap
	instead of XColormap for colorMap.  Revert GUI_ButtonRight change.
	Use setDisplayWidget:colormap: instead of setDisplayWidget:Colormap:.

	* main.m (main): Constify argv.
